.provarCaches/00D5f000005vwGkEAI/objects/rstk__pedisadd__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_pedisadd</customHelpPage>
    <description>pedisadd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pedisadd_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__pedisadd_peitem__r.rstk__peitem_item__c + &apos;_&apos; +  rstk__pedisadd_compitem__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pedisadd_peitem__r.Name + &apos;_&apos; + rstk__pedisadd_compitem__r.Name</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__pedisadd_compitem__r.rstk__peitem_item__c + &apos; &apos; +  rstk__pedisadd_peitem__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pedisadd_compitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Consumable  component Item Number</inlineHelpText>
        <label>Component Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipName>components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pedisadd_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The division to which the user is signed in to.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Consumable Components</relationshipLabel>
        <relationshipName>Disassembly_Derived_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pedisadd_firstdate__c</fullName>
        <inlineHelpText>First effective date for this consumable item.</inlineHelpText>
        <label>First Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pedisadd_lastdate__c</fullName>
        <inlineHelpText>Last date that this consumable component will be effective.</inlineHelpText>
        <label>Last Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pedisadd_peitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Parent Item of the consumable component.</inlineHelpText>
        <label>Parent Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipName>Disassembly_Derived_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pedisadd_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Component Quantity Per on this parent.</inlineHelpText>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Consumable Component</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Disassembly_Consumable_Components</fullName>
        <columns>NAME</columns>
        <columns>rstk__pedisadd_div__c</columns>
        <columns>rstk__pedisadd_peitem__c</columns>
        <columns>rstk__pedisadd_compitem__c</columns>
        <columns>rstk__pedisadd_qtyper__c</columns>
        <columns>rstk__pedisadd_firstdate__c</columns>
        <columns>rstk__pedisadd_lastdate__c</columns>
        <filterScope>Everything</filterScope>
        <label>Disassembly Consumable Components</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumable Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Component_Division</fullName>
        <active>true</active>
        <description>Component Division</description>
        <errorConditionFormula>rstk__pedisadd_compitem__c != null &amp;&amp; rstk__pedisadd_compitem__r.rstk__peitem_div__c !=  rstk__pedisadd_div__c</errorConditionFormula>
        <errorMessage>Invalid Component Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Component_Item_Required</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pedisadd_compitem__c == null</errorConditionFormula>
        <errorMessage>Component Item is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division_Required</fullName>
        <active>true</active>
        <description>Division Required</description>
        <errorConditionFormula>ISBLANK( rstk__pedisadd_div__c )</errorConditionFormula>
        <errorMessage>Division is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Effective_Date_Range</fullName>
        <active>true</active>
        <description>Effective Date Range</description>
        <errorConditionFormula>rstk__pedisadd_lastdate__c != null &amp;&amp; rstk__pedisadd_firstdate__c != null &amp;&amp; rstk__pedisadd_lastdate__c &lt;  rstk__pedisadd_firstdate__c</errorConditionFormula>
        <errorMessage>Last Effective Date cannot be prior to First Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Parent_Division</fullName>
        <active>true</active>
        <description>Parent Division</description>
        <errorConditionFormula>rstk__pedisadd_peitem__c != null &amp;&amp; rstk__pedisadd_peitem__r.rstk__peitem_div__c !=  rstk__pedisadd_div__c</errorConditionFormula>
        <errorMessage>Invalid Parent Item Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Parent_Item_Required</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pedisadd_peitem__c == null</errorConditionFormula>
        <errorMessage>Parent Item is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Qty_Per_Range</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pedisadd_qtyper__c &lt;= 0</errorConditionFormula>
        <errorMessage>Quantity Per must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>